--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.1.1
+-------------
+    * Fix the version
+    * Moved test config out into a test profile
+
+
 Version 0.1.0
 -------------
     * Initial commit
