set version and add to changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.2.0
+-------------
+    * Language protos build_defs should know what language they are for so
+    removing language from the arguments
+
+
 Version 0.1.1
 -------------
     * Fix the version
