--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 0.3.0
+-------------
+    * Add the old legacy rules to help each the migration to the new rules.
+
 Version 0.2.0
 -------------
     * Language protos build_defs should know what language they are for so
