--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 0.3.1
+-------------
+    * Remove specialisation for aarch64
+
+
 Version 0.3.0
 -------------
     * Add the old legacy rules to help each the migration to the new rules.
